--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -2,26 +2,26 @@
 {% load static %}
 <html lang="ru">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
-    <link rel="apple-touch-icon" sizes="180x180"
-          href="{% static 'img/fav/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32"
-          href="{% static 'img/fav/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16"
-          href="{% static 'img/fav/favicon-16x16.png' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    {% block title_name %}  {% endblock %}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
+  <link rel="apple-touch-icon" sizes="180x180"
+        href="{% static 'img/fav/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32"
+        href="{% static 'img/fav/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16"
+        href="{% static 'img/fav/favicon-16x16.png' %}">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <title>{% block title_name %} {% endblock %}</title>
 </head>
 <body>
 {% block header_content %} {% endblock %}
 <main>
-    {% block content %}
-    {% endblock %}
+  {% block content %}
+  {% endblock %}
 </main>
 <footer class="border-top text-center py-3">
-    <p>© Блогикум</p>
+  <p>© Блогикум</p>
 </footer>
 </body>
 </html>
