--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -15,10 +15,42 @@
   <title>{% block title_name %} {% endblock %}</title>
 </head>
 <body>
-{% block header_content %} {% endblock %}
+<header>
+  <nav class="navbar navbar-light" style="background-color: lightskyblue">
+    <div class="container">
+      <a class="navbar-brand" href="{% url 'blog:index' %}">
+        <img src="{% static 'img/logo.png' %}" width="30" height="30"
+             class="d-inline-block align-top" alt="">
+        Блогикум
+      </a>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == '/' %}active{% endif %}"
+             href="{% url 'blog:index' %}">
+            Лента записей
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == '/pages/about/' %}active{% endif %}"
+             href="{% url 'pages:about' %}">
+            О проекте
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == '/pages/rules/' %}active{% endif %}"
+             href="{% url 'pages:rules' %}">
+            Наши правила
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
 <main>
-  {% block content %}
-  {% endblock %}
+  <div class="container py-5">
+    {% block content %}
+    {% endblock %}
+  </div>
 </main>
 <footer class="border-top text-center py-3">
   <p>© Блогикум</p>
