--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
-{% load static %}
 {% block title_name %}
 Лента записей
 {% endblock %}
 {% block content %}
 <h1>Лента записей</h1>
 <ul>
-  {% for post in post_list reversed %}
+  {% for post in post_list|dictsortreversed:'id' %}
   <hr>
   <article>
     <li>
@@ -16,7 +15,7 @@
       {{ post.date }}
     </li>
     <li>
-      Категория: <a href="/category/{{ post.category }}">{{ post.category }}</a>
+      Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
     </li>
     <p>
       {{ post.text|truncatewords:10 }}
