--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,22 +1,12 @@
 {% extends "base.html" %}
-{% block title_name %}
-  {{ post.location }} {{ post.date }}
+{% block title %}
+{{ post.title }} | {% if post.location and post.location.is_published %}{{ post.location.name }} |{% endif %} {{ post.pub_date|date:"d E Y" }}
 {% endblock %}
 {% block content %}
-<article>
-  <ul>
-    <li>
-      {{ post.location }}
-    </li>
-    <li>
-      {{ post.date }}
-    </li>
-    <li>
-      Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
-    </li>
-  </ul>
-  <p>
-    {{ post.text|linebreaksbr }}
-  </p>
-</article>
+  <article>
+    <p>{{ post.pub_date|date:"d E Y" }} | {% if post.location and post.location.is_published %}{{ post.location.name }}{% else %}Планета Земля{% endif %}<br>
+      <small>От автора @{{ post.author.username }} в категории {% include "includes/category_link.html" %}</small></p>
+    <h3>{{ post.title }}</h3>
+    <p>{{ post.text|linebreaksbr }}</p>
+  </article> 
 {% endblock %}
