--- a/blogicum/templates/includes/category_link.html
+++ b/blogicum/templates/includes/category_link.html
@@ -1,4 +1,3 @@
-<a class="text-muted"
-   href="{% url 'blog:category_posts' post.category.slug %}">
-  «{{ post.category.title }}»
+<a class="text-muted" href="{% url 'blog:category_posts' post.category.slug %}">
+  {{ post.category.title }}
 </a>
