--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -2,29 +2,41 @@
 <header>
   <nav class="navbar navbar-light" style="background-color: lightskyblue">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'blog:index' %}">
+      <a class="navbar-brand" href="{% url 'blog:homepage' %}">
         <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
         Блогикум
       </a>
-      {% with request.resolver_match.view_name as view_name %}        
+      {% with request.resolver_match.view_name as view_name %}
         <ul class="nav  nav-pills">
-          <li class="nav-item">              
-            <a class="nav-link {% if view_name == 'blog:index' %} active {% endif %}" href="{% url 'blog:index' %}">
-              Лента записей
-            </a>
-          </li>
-          <li class="nav-item">              
-            <a class="nav-link {% if view_name == 'pages:about' %} active {% endif %}" href="{% url 'pages:about' %}">
+          <li class="nav-item">
+            <a class="nav-link {% if view_name == 'pages:about' %} text-white {% endif %}" href="{% url 'pages:about' %}">
               О проекте
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if view_name == 'pages:rules' %} active {% endif %}" href="{% url 'pages:rules' %}">
-              Наши правила
+            <a class="nav-link {% if view_name == 'pages:rules' %} text-white {% endif %}" href="{% url 'pages:rules' %}">
+              Правила
             </a>
           </li>
+          {% if user.is_authenticated %}
+            <div class="btn-group" role="group" aria-label="Basic outlined example">
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'blog:create_post' %}">Написать пост</a></button>
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'blog:profile' user.username %}">{{ user.username }}</a></button>
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'logout' %}">Выйти</a></button>
+            </div>
+          {% else %}
+            <div class="btn-group" role="group" aria-label="Basic outlined example">
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'login' %}">Войти</a></button>
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'registration' %}">Регистрация</a></button>
+            </div>
+          {% endif %}
         </ul>
-      {% endwith %}      
+      {% endwith %}
     </div>
-  </nav> 
+  </nav>
 </header>
