--- a/blogicum/templates/pages/403csrf.html
+++ b/blogicum/templates/pages/403csrf.html
@@ -2,5 +2,5 @@
 {% block title %}Ошибка CSRF токена{% endblock %}
 {% block content %}
   <h1>Ошибка CSRF токена. 403</h1>
-  <a href="{% url 'blog:index' %}">Вернуться на главную</a>
+  <a href="{% url 'blog:homepage' %}">Вернуться на главную</a>
 {% endblock %}
