--- a/blogicum/templates/pages/404.html
+++ b/blogicum/templates/pages/404.html
@@ -3,5 +3,5 @@
 {% block content %}
   <h1>Страница не найдена</h1>
   <p>Страницы с адресом {{ request.build_absolute_uri }} не существует!</p>
-  <a href="{% url 'blog:index' %}">Вернуться на главную</a>
+  <a href="{% url 'blog:homepage' %}">Вернуться на главную</a>
 {% endblock %}
