--- a/blogicum/templates/pages/500.html
+++ b/blogicum/templates/pages/500.html
@@ -3,5 +3,5 @@
 {% block content %}
   <h1>Ошибка сервера</h1>
   <p>На сервере что-то пошло не так!</p>
-  <a href="{% url 'blog:index' %}">Вернуться на главную</a>
+  <a href="{% url 'blog:homepage' %}">Вернуться на главную</a>
 {% endblock %}
