--- a/blogicum/templates/blog/comment.html
+++ b/blogicum/templates/blog/comment.html
@@ -12,7 +12,7 @@
     <div class="col d-flex justify-content-center">
       <div class="card" style="width: 40rem;">
         <div class="card-header">
-          {% if '/edit_comment/' in request.path %}
+          {% if '/edit_comment' in request.path %}
             Редактирование комментария
           {% else %}
             Удаление комментария
@@ -20,16 +20,17 @@
         </div>
         <div class="card-body">
           <form method="post"
-            {% if '/edit_comment/' in request.path %}
+            {% if '/edit_comment' in request.path %}
               action="{% url 'blog:edit_comment' comment.post_id comment.id %}"
             {% endif %}>
             {% csrf_token %}
-            {% if not '/delete_comment/' in request.path %}
+            {% if not '/delete_comment' in request.path %}
               {% bootstrap_form form %}
+            {% bootstrap_button button_type="submit" content="Отправить" %}
             {% else %}
               <p>{{ comment.text }}</p>
+            <button type="submit" class="btn btn-danger">Удалить</button>
             {% endif %}
-            {% bootstrap_button button_type="submit" content="Отправить" %}
           </form>
         </div>
       </div>
