Otnositel'no stable 4

--- a/blogicum/templates/includes/post_card.html
+++ b/blogicum/templates/includes/post_card.html
@@ -20,8 +20,10 @@
         </small>
       </h6>
       <p class="card-text">{{ post.text|truncatewords:10 }}</p>
+      <a><u>Комментарии ({{ post.comment_count }})</u></a>
+    </div>
+    <div class="card-footer">
       <a href="{% url 'blog:post_detail' post.id %}" class="card-link">Читать полный текст</a>
-      <a href="{% url 'blog:post_detail' post.id %}" class="card-link text-muted">Комментарии ({{ post.comment_count }})</a>
     </div>
   </div>
 </div>
