--- a/blogicum/templates/blog/profile.html
+++ b/blogicum/templates/blog/profile.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 {% block title %}
-  Страница пользователя {{ user_profile.username }}
+  Страница пользователя {{ profile.username }}
 {% endblock %}
 {% block content %}
-  <h1 class="mb-5 text-center ">Страница пользователя {{ user_profile.username }}</h1>
+  <h1 class="mb-5 text-center ">Страница пользователя {{ profile.username }}</h1>
   <small>
     <ul class="list-group list-group-horizontal justify-content-center mb-3">
-      <li class="list-group-item text-muted">Имя пользователя: {% if user_profile.get_full_name %}{{ user_profile.get_full_name }}{% else %}не указано{% endif %}</li>
-      <li class="list-group-item text-muted">Регистрация: {{ user_profile.date_joined }}</li>
-      <li class="list-group-item text-muted">Роль: {% if user_profile.is_staff %}Админ{% else %}Пользователь{% endif %}</li>
+      <li class="list-group-item text-muted">Имя пользователя: {% if profile.get_full_name %}{{ profile.get_full_name }}{% else %}не указано{% endif %}</li>
+      <li class="list-group-item text-muted">Регистрация: {{ profile.date_joined }}</li>
+      <li class="list-group-item text-muted">Роль: {% if profile.is_staff %}Админ{% else %}Пользователь{% endif %}</li>
     </ul>
     <ul class="list-group list-group-horizontal justify-content-center">
-      {% if user.is_authenticated and request.user == user_profile %}
-      <a class="btn btn-sm text-muted" href="{% url 'blog:edit_profile' user_profile.username %}">Редактировать профиль</a>
+      {% if user.is_authenticated and request.user == profile %}
+      <a class="btn btn-sm text-muted" href="{% url 'blog:edit_profile' %}">Редактировать профиль</a>
       <a class="btn btn-sm text-muted" href="{% url 'password_change' %}">Изменить пароль</a>
       {% endif %}
     </ul>
